--- a/trainingpathapi/package.json
+++ b/trainingpathapi/package.json
@@ -10,6 +10,17 @@
     "author": "Laura Martinez",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1"
+        "awilix": "^4.2.6",
+        "bcryptjs": "^2.4.3",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-async-errors": "^3.1.1",
+        "helmet": "^3.22.0",
+        "jsonwebtoken": "^8.5.1",
+        "memory-cache": "^0.2.0",
+        "mongoose": "^5.9.14",
+        "swagger-ui-express": "^4.1.4"
     }
 }
