--- a/trainingpathapi/package.json
+++ b/trainingpathapi/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
+        "gravatar": "^1.8.0",
         "helmet": "^3.22.0",
         "jsonwebtoken": "^8.5.1",
         "memory-cache": "^0.2.0",
