--- a/trainingpathapi/.env
+++ b/trainingpathapi/.env
@@ -2,3 +2,5 @@ PORT=5000
 MONGO_URI= "mongodb+srv://admin:admin123@trainingpathdb-iuj75.azure.mongodb.net/trainingpath?retryWrites=true&w=majority"
 APPLICATION_NAME="Training Path 10Pearls"
 JWT_SECRET=vfmhg453534%#$Gegdfvdghg345$#%#
+CACHE_KEY=myStrongPassword
+SWAGGER_DOC=swaggerDEV
