--- a/trainingpathapi/package.json
+++ b/trainingpathapi/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node server",
-        "server": "nodemon server"
+        "server": "nodemon server",
+        "test": "jest"
     },
     "author": "Laura Martinez",
     "license": "ISC",
@@ -19,8 +20,10 @@
         "express-async-errors": "^3.1.1",
         "gravatar": "^1.8.0",
         "helmet": "^3.22.0",
+        "jest": "^26.0.1",
         "jsonwebtoken": "^8.5.1",
         "memory-cache": "^0.2.0",
+        "mockingoose": "^2.13.2",
         "mongoose": "^5.9.14",
         "swagger-ui-express": "^4.1.4"
     }
