commit udemy courses, create course, validations, alerts

--- a/trainingpathapi/.env
+++ b/trainingpathapi/.env
@@ -4,3 +4,4 @@ APPLICATION_NAME="Training Path 10Pearls"
 JWT_SECRET=vfmhg453534%#$Gegdfvdghg345$#%#
 CACHE_KEY=myStrongPassword
 SWAGGER_DOC=swaggerDEV
+SENDGRID_API_KEY= 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
