--- a/trainingpathapi/package.json
+++ b/trainingpathapi/package.json
@@ -6,12 +6,15 @@
     "scripts": {
         "start": "node server",
         "server": "nodemon server",
-        "test": "jest"
+        "test": "jest",
+        "dev": "concurrently \"npm run server \" \"npm run trainingpathweb\""
     },
     "author": "Laura Martinez",
     "license": "ISC",
     "dependencies": {
+        "@sendgrid/mail": "^7.1.1",
         "awilix": "^4.2.6",
+        "axios": "^0.19.2",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
@@ -25,6 +28,7 @@
         "memory-cache": "^0.2.0",
         "mockingoose": "^2.13.2",
         "mongoose": "^5.9.14",
-        "swagger-ui-express": "^4.1.4"
+        "swagger-ui-express": "^4.1.4",
+        "validator": "^13.0.0"
     }
 }
