log process dashboard

--- a/trainingpathweb/package.json
+++ b/trainingpathweb/package.json
@@ -11,17 +11,23 @@
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
         "axios": "^0.19.2",
+        "chart.js": "^2.9.3",
         "dotenv": "^8.2.0",
-        "material-table": "^1.57.2",
+        "material-table": "^1.59.0",
+        "moment": "^2.26.0",
+        "mui-datatables": "^2.15.0",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
+        "react-chartjs-2": "^2.9.0",
         "react-dom": "^16.13.1",
+        "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "tubular-react": "^4.1.29"
     },
     "scripts": {
         "start": "react-scripts start --require dotenv/config",
