--- a/trainingpathapi/.env
+++ b/trainingpathapi/.env
@@ -1,7 +1,7 @@
-PORT=5000
-MONGO_URI= "mongodb+srv://admin:admin123@trainingpathdb-iuj75.azure.mongodb.net/trainingpath?retryWrites=true&w=majority"
+PORT=5001
+MONGO_URI="mongodb+srv://admin:admin123@trainingpathdb-iuj75.azure.mongodb.net/trainingpath?retryWrites=true&w=majority"
 APPLICATION_NAME="Training Path 10Pearls"
 JWT_SECRET=vfmhg453534%#$Gegdfvdghg345$#%#
 CACHE_KEY=myStrongPassword
 SWAGGER_DOC=swaggerDEV
-SENDGRID_API_KEY= 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
+SENDGRID_API_KEY=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
